Add mispelling and link  corrections

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 	<div class="content-wrapper">
 		<div class="v-center">
 			<div class="main-content">
-				<p>Hola, este Pablo. Creo apps simples y elegantes. I desafio a mi miso para mejorar en mi trabajo cada día. He estado escribiendo codigo de forma regular por 10 años en en Android por 2. Vea mi <a href="http://eelslap.com">portafolio</a>.</p>
+				<p>Hola, soy Pablo Farias. Creo apps simples y elegantes. Me desafio a mi miso para mejorar en mi trabajo cada día. He estado escribiendo codigo por 10 años y en en Android def forma regular por 2. Vea mi <a href="http://eelslap.com">portafolio</a>.</p>
 				<ul>
-					<li><a href="http://twitter.com/svencreations">Twitter</a></li>
-					<li><a href="http://facebook.com/svencreations">Facebook</a></li>
-					<li><a href="https://dribbble.com/svencreations">Dribbble</a></li>
-					<li><a href="mailto:svencreations@gmail.com">Contact</a></li>
+					<li><a href="https://twitter.com/MunozPablo">Twitter</a></li>
+					<!-- <li><a href="http://facebook.com/svencreations">Facebook</a></li> -->
+					<li><a href="https://github.com/pamunoz">GitHub</a></li>
+					<li><a href="mailto:pfariasmunoz@gmail.com">Contact</a></li>
 				</ul>
 			</div>
 		</div>
